# OSPREY3

./: #.gitignore#  *scratch*  .build.yml  .classpath  .dockerignore  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  2RL0-ewakstar-output.pfs.txt  CITATION_REQUIREMENTS.txt  CITING_OSPREY.txt  CONTRIBUTING.rst  EWAK.java  EWAKRatios.java  LICENSE.txt  Ligand2XXMContinuousBounds.txt  PartitionFuncDict.java  Protein2XXMContinuousBounds.txt  README.md  README.rst  README.txt  azure-pipelines.yml  build.gradle  build.gradle.kts  build.gradle.kts_test  build.xml  ewak.0.emat  ewak.1.emat  ewak.2.emat  ewak.L.emat  ewak.P.emat  ewak.PL.emat  ewak.PL.emat.updated  ewak.PL.pmat  ewak.complex.rigidNegated  ewak.ligand.rigidNegated  ewak.protein.rigidNegated  ewakStar.filteredSeqs.txt  (+37 more)
OSPREY_refactor_master/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
buildSrc/: build.gradle.kts
dataFiles/: GenericRotamers.dat.vol  LovellRotamer.dat.vol  all_amino94.in  all_amino_charmm19.in  all_amino_charmm19_neutral.in  all_amino_charmm19_neutral_nt.in  all_aminoct94.in  all_aminont94.in  all_nuc94_and_gr.in  all_nuc_and_gr_charmm.in  defaults.cfg
doc/: config.toml  go.mod  optimizing-graphs.md  optimizing-minimizers.md  optimizing.md  pydoc-markdown.yml
doc/archetypes/: doc-version.md
doc/content/: _index.md
examples/1CC8/: 1CC8.confs.txt  1CC8.pert.confs.txt  1CC8.pert.pert  DEE.cfg  DEE.pert.cfg  System.cfg
examples/1CC8.13/: DEE13.cfg
examples/1CC8.deeper/: .gitignore  1CC8.confs.txt  1CC8.pert  DEE.cfg  System.cfg
examples/1CC8.junit/: 1CC8.confs.txt  DEE.cfg  README  System.cfg
examples/1CC8.python/: findGMEC.DEEPer.py  findGMEC.LUTE.py  findGMEC.advanced.py  findGMEC.energyPartitions.py  findGMEC.externalMemory.py  findGMEC.multipleStrands.py  findGMEC.py  findGMEC.referenceEnergies.py  findGMEC.resEntropy.py  templateLibrary.py
examples/1FSV/: DEE.cfg
examples/2O9S_L2/: DEE.cfg  KStar.cfg  System.cfg
examples/2RL0.kstar/: 2RL0-output.mhall44s-MacBook-Pro.local.linear.parallel0.txt  2RL0-output.mhall44s-MacBook-Pro.local.linear.parallelConf.txt  cfgMutSearch.txt  cfgSystem.txt
examples/3K75.3LQC/: DEE.3K75.b.cfg  DEE.3K75.ub.cfg  KStar.cfg
examples/4HEM/: KStar.cfg
examples/4NPD/: DEE.cfg  System.cfg
examples/adi.1AHO/: System.cfg
examples/ccs.D-peptide/: D-peptide.py  GUImatch.omol  PINTmatch.confspace
examples/ccs.D-peptide-L-protein/: Chain_Renamer.py  Confspace_Combiner.py  DL-preprocess.py  DL.py  DL_preprocess.py  DL_submit.py  DL_submit_basic.py  Scaffold_Generator.py  Slurm_Maker.py  ccsKstar.py  efxn_gd.py  get_Kstar.sh  ktune.sh  slurm_submitter.sh  submit_jobs.sh
examples/ccs.two-mutants/: python.csv  two-mut-prep.py
examples/comets.junit/: DEE.3K75.b.cfg  DEE.3K75.ub.cfg  DEE.3LQC.b.cfg  DEE.3LQC.ub.cfg  System.3LQC.ub.cfg
examples/gpu/: diagnostics.py
examples/python.EWAKStar/: ewak.PL.emat  ewak.PL.emat.updated  ewak.complex.rigidNegated  ewak.ligand.rigidNegated  ewak.protein.rigidNegated  ewakStar.results.txt  ewakstar.2hnv.py  ewakstar.L.emat  ewakstar.L.ematRigid  ewakstar.P.emat  ewakstar.P.ematRigid  ewakstar.PL.emat  ewakstar.PL.ematRigid  ewakstar.py  ewakstar.sequences.tsv
examples/python.GMEC/: .gitignore  analyzeConf.py  comets.boundedMemory.py  comets.py  findGMEC.DEE.py  findGMEC.DEEPer.py  findGMEC.LUTE.design.py  findGMEC.LUTE.py  findGMEC.LUTE.train.py  findGMEC.advanced.py  findGMEC.cats.py  findGMEC.confDB.py  findGMEC.energyPartitions.py  findGMEC.externalMemory.py  findGMEC.multipleStrands.py  findGMEC.py  findGMEC.referenceEnergies.py  findGMEC.resEntropy.py  findGMEC.resume.py  plug.py  templateLibrary.py  wildtypeEnergies.py
examples/python.KStar/: .gitignore  5uce.cfs  5ucf.cfs  LUTE.bbkstar.py  LUTE.confSpaces.py  LUTE.kstar.py  LUTE.train.py  STR0.2rl0.pert.pert  analyzeSequence.py  bbkstar.complex.db  bbkstar.confdb.py  bbkstar.ligand.db  bbkstar.old.py  bbkstar.protein.db  bbkstar.py  bbkstar.results.tsv  kstar.confdb.py  kstar.old.py  kstar.py  kstar.results.tsv  kstar.singleSequence.py  markstar.bbkstar.py  markstar.kstar.py  mskstar.mark.py  (+4 more)
gradle/: project-schema.json
lib/: nblibraries.properties
native/c/confEcalc/: .gitignore  CMakeLists.txt  confEcalc.c  confSpace.c  confSpace.h  config.h.in  global.h  math.c  math.h  real.h
native/cc/ConfEcalc/: CMakeLists.txt  assignment.h  atoms.h  confecalc.cc  config.h.in  confspace.h  energy.h  energy_ambereef1.h  global.h  minimization.h  motions.h  real3.h  rotation.h
native/cc/IntelConfEcalc/: CMakeLists.txt  assignment.h  atoms.h  config.h.in  global.h  minimization.h
native/cu/CudaConfEcalc/: .gitignore  CMakeLists.txt  array.h  assignment.h  confecalc.cu  confspace.h  cuda.cu  cuda.h  energy.h  energy_ambereef1.h  formats.h  global.h  minimization.h  motions.cu  motions.h  rotation.h
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
python/: listpatforms.py  listplatforms.py  setup.py
resources/: logback.xml
results/: results.txt
src/main/cu/CudaConfEcalc/: CMakeLists.txt  api.cu  assignment.h  confecalc.cu  confecalc.h  config.h.in  confspace.h  cuda.cu  cuda.h  energy.h  energy_ambereef1.h  formats.h  global.h  minimization.h  motions.cu  motions.h  rotation.h  rundump.cu
src/main/cu/CudaConfEcalc/motions/: dihedral.cu  dihedral.h  transrot.cu  transrot.h
test-resources/: 1a0r_B_5res_1.827E+05.cfs  2rf9_A_5res_7.308E+04.cfs  2rf9_D_8res_9.231E+07.cfs  2rfe_A_6res_2.302E+07.cfs  2rfe_F_6res_16seq.cfs  2rfe_F_6res_2seq.cfs  2rfe_F_6res_5.934E+07.cfs  2rfe_F_6res_64seq.cfs  2rl0_A_11res_4.041E+09.cfs  2rl0_D_4res_1.488E+07.cfs  2rl0_D_6res_6.366E+06.cfs  3bua_B_10res_4.363E+11.cfs  3k3q_C_16res_1.047E+16.cfs  3ma2_A_6res_3.157E+06.cfs  3u7y_L_4res_9.135E+04.cfs  4wem_B_5res_2.014E+07.cfs  4wwi_A_3res_4.547E+04.cfs  4wyq_E_6res_2.819E+08.cfs  4wyu_A_3res_6.090E+03.cfs  4z80_B_11res_8.398E+11.cfs  4znc_E_7res_1.065E+10.cfs  5a6y_B_4res_7.714E+04.cfs  5it3_A_7res_6.446E+08.cfs  SARS2RBD_peptide_19+21.cfs  SARS2RBD_peptide_37.cfs  SARS2RBD_peptide_79.cfs
(+4740 files in other folders)
